Cascading Change Log

2.0.2 [unreleased]

  Fixed issue where c.p.Merge into the streamed side of a c.p.HashJoin would produce an incorrect plan.

  Fixed issue where c.p.CoGroup was not properly resolving fields from immediate prior c.p.Every pipes.

2.0.1

  Changed c.s.h.TextDelimited to use fully qualified path when reading headers so that the filesystem scheme
  will be inherited.

  Removed redundant property value kept by c.t.h.i.MultiInputSplit to reduce input split serialized size.

  Updated commit and rollback functionality in c.f.BaseFlow and c.f.p.BaseFlowStep to fail the c.f.Flow on a
  c.t.Tap#commitResource failure and to call Tap#rollbackResource on subsequent tap instances. Note this isn't
  intended to provide a 2PC type transactional functionality.

  Updated dependency to Hadoop 1.0.3

2.0.0

  Added c.p.Checkpoint pipe to force any supported planners to persist the tuple stream at that location. If bound to
  a checkpoint c.t.Tap via the c.f.FlowDef, this data will not be cleaned up after the c.f.Flow completes. This pipe
  is useful in conjunction with a c.p.HashJoin to minimize replicated data.

  Added c.t.l.TemplateTap for local mode. Refactored out c.t.BaseTemplateTap to simplify support for additional
  platforms.

  Added c.t.l.StdIn, StdOut, and StdErr local mode c.t.Tap types.

  Changed c.f.h.HadoopFlowStep to save step state to the Hadoop distributed cache if larger than Short.MAX_VALUE.

  Fixed issue where a null value was printed as "null" in c.o.r.RegexMatcher, c.o.r.RegexFilter, c.o.a.AssertGroupBase,
  and c.o.t.FieldJoiner.

  Updated dependency to Hadoop 1.0.2.

  Changed c.s.h.TextDelimited and c.s.l.TextDelimited to optionally read the field names from from the header during
  planning if skipHeaders or hasHeaders is set to true and if Fields.ALL or Fields.UNKNOWN is declared on the
  constructor.

  Changed the planner and added new methods to c.s.Scheme so that field names can be retrieved after a proper